feat: add leaderboard table

--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@
 #VITE_XERIAL_PROJECT_ID=65cbd73c10da2e4ddfaaa233 
 
 VITE_XERIAL_PROJECT_ID=65df71d018c7c9a102c36dd1
-VITE_API_BASE_URL=https://backend.sugarkingdom.io/api/
+VITE_API_BASE_URL=https://backend.sugarkingdom.io
