--- a/package.json
+++ b/package.json
@@ -25,12 +25,15 @@
     "zustand": "^4.5.0"
   },
   "devDependencies": {
+    "@types/bignumber.js": "^5.0.0",
     "@types/node": "^20.14.1",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
     "@vitejs/plugin-react": "^4.2.1",
+    "bignumber.js": "^9.1.2",
+    "dayjs": "^1.11.11",
     "eslint": "^8.55.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
