--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
-#Esteban wallet
-#VITE_XERIAL_PROJECT_ID=65cbd73c10da2e4ddfaaa233 
-
 VITE_XERIAL_PROJECT_ID=65df71d018c7c9a102c36dd1
 VITE_API_BASE_URL=https://backend.sugarkingdom.io
+
+# BSC Mainnet
+#VITE_NETWORK_ID=0x38
+# BSC Testnet
+VITE_NETWORK_ID=0x61
