--- a/package.json
+++ b/package.json
@@ -10,15 +10,19 @@
     "preview": "vite preview --port 8080"
   },
   "dependencies": {
+    "@cryptography/sha256": "^0.2.0",
+    "@ethersproject/units": "^5.7.0",
     "@tanstack/react-query": "^5.22.2",
     "@tanstack/react-query-devtools": "^5.24.0",
     "@tanstack/react-table": "^8.17.3",
+    "@usedapp/core": "^1.2.16",
     "axios": "^1.6.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-idle-timer": "^5.7.2",
     "react-router-dom": "^6.23.1",
     "react-text-transition": "^3.1.0",
+    "react-toastify": "^10.0.5",
     "react-unity-webgl": "^9.5.0",
     "swiper": "^11.0.6",
     "xerial-wallet-sdk": "^1.0.10",
@@ -37,7 +41,6 @@
     "eslint": "^8.55.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
-    "ethers": "^6.11.0",
     "typescript": "^5.2.2",
     "vite": "^5.0.8"
   }
